--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4002,5 +4002,27 @@
         <target>Old</target>
       </segment>
     </unit>
+    <unit id="lOtZ4.p" name="Eingeschränkter Import">
+      <notes>
+        <note category="german">Eingeschränkter Import</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Eingeschränkter Import</source>
+        <target>Restricted Import</target>
+      </segment>
+    </unit>
+    <unit id="mBqJlZa" name="Hauptseele ohne Einschränkungen importieren">
+      <notes>
+        <note category="german">Hauptseele ohne Einschränkungen importieren</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Hauptseele ohne Einschränkungen importieren</source>
+        <target>Import main soul without restrictions</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
