--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -3966,5 +3966,27 @@
         <target>Ancien</target>
       </segment>
     </unit>
+    <unit id="lOtZ4.p" name="Eingeschränkter Import">
+      <notes>
+        <note category="german">Eingeschränkter Import</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Eingeschränkter Import</source>
+        <target>Eingeschränkter Import</target>
+      </segment>
+    </unit>
+    <unit id="mBqJlZa" name="Hauptseele ohne Einschränkungen importieren">
+      <notes>
+        <note category="german">Hauptseele ohne Einschränkungen importieren</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Hauptseele ohne Einschränkungen importieren</source>
+        <target>Hauptseele ohne Einschränkungen importieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
