--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9199,5 +9199,38 @@
         <target><![CDATA[Este objeto está <strong class="red">roto</strong>, ¡por lo tanto no puedes utilizarlo! Quizás alguien en el pueblo pueda repararlo.]]></target>
       </segment>
     </unit>
+    <unit id="nPNoAvx">
+      <notes>
+        <note category="german">You grind the contents of {items_consume} on the table and mix it with anything and everything that comes to hand... then let it infuse.</note>
+        <note category="from">db://ItemAction</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du zermahlst den Inhalt von {items_consume} auf dem Tisch und mischst ihn mit allem, was dir in die Hände fällt... und lässt ihn dann ziehen.</source>
+        <target>Du zermahlst den Inhalt von {items_consume} auf dem Tisch und mischst ihn mit allem, was dir in die Hände fällt... und lässt ihn dann ziehen.</target>
+      </segment>
+    </unit>
+    <unit id="qeC3d4b" name="Ein überragender Erfolg: Du hast {items_spawn} erhalten!">
+      <notes>
+        <note category="german">It's a roaring success : you have obtained {items_spawn} !</note>
+        <note category="from">db://AffectMessage</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ein überragender Erfolg: Du hast {items_spawn} erhalten!</source>
+        <target>Ein überragender Erfolg: Du hast {items_spawn} erhalten!</target>
+      </segment>
+    </unit>
+    <unit id="RvnC1X2">
+      <notes>
+        <note category="german">The dodgy smoke pouring out of the mixture hints that &lt;strong&gt;everything may not have gone exactly as planned&lt;/strong&gt;. You have obtained a random drug: {items_spawn}</note>
+        <note category="from">db://AffectMessage</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Der verdächtige Rauch, der aus der Mischung austritt, deutet darauf hin, dass &lt;strong&gt;nicht alles so gelaufen ist wie geplant&lt;/strong&gt;. Du hast eine zufällige Droge erhalten: {items_spawn}</source>
+        <target><![CDATA[Der verdächtige Rauch, der aus der Mischung austritt, deutet darauf hin, dass <strong>nicht alles so gelaufen ist wie geplant</strong>. Du hast eine zufällige Droge erhalten: {items_spawn}]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
