--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -8644,18 +8644,16 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
     <unit id="WZjQ7F6">
       <notes>
         <note category="german">Du befielst diesem Bürger sich zu &lt;strong&gt;stärken&lt;/strong&gt;, damit ihr gemeinsam weiterziehen könnt. Er ist einverstanden und holt eine(e,n) {item} aus seinem Sack... Ihr macht ne kleine Brotzeit...{hr}{user} hat seine AP aufgefüllt!</note>
-        <note category="state">new</note>
         <note category="from">db://ItemAction</note>
       </notes>
       <segment>
         <source>Du befielst diesem Bürger sich zu &lt;strong&gt;stärken&lt;/strong&gt;, damit ihr gemeinsam weiterziehen könnt. Er ist einverstanden und holt eine(e,n) {item} aus seinem Sack... Ihr macht ne kleine Brotzeit...{hr}{user} hat seine AP aufgefüllt!</source>
-        <target><![CDATA[You tell the citizen to eat something before continuing. They agree and whip out their {item}... After a brief lunch stop...{hr}{user}  has regained all their APs!]]></target>
+        <target>You tell the citizen to eat something before continuing. They agree and whip out their {item}... After a brief lunch stop...{hr}{user}  has regained all their APs!</target>
       </segment>
     </unit>
     <unit id="gVu_1LO" name="Der Bürger hat das Wasser in einem Zug ausgetrunken. Das tut gut!">
       <notes>
         <note category="german">Der Bürger hat das Wasser in einem Zug ausgetrunken. Das tut gut!</note>
-        <note category="state">new</note>
         <note category="from">db://ItemAction</note>
       </notes>
       <segment>
