FR Translation for soul import (admin)

--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -3974,7 +3974,7 @@
       </notes>
       <segment>
         <source>Eingeschränkter Import</source>
-        <target>Eingeschränkter Import</target>
+        <target>Importation restreinte</target>
       </segment>
     </unit>
     <unit id="mBqJlZa" name="Hauptseele ohne Einschränkungen importieren">
@@ -3985,7 +3985,7 @@
       </notes>
       <segment>
         <source>Hauptseele ohne Einschränkungen importieren</source>
-        <target>Hauptseele ohne Einschränkungen importieren</target>
+        <target>Importer l’âme principale sans restrictions</target>
       </segment>
     </unit>
   </file>
